Bug 1561875 - Increase the profiler's popup's width to fix layout issues on Linux r=gregtatum
Differential Revision: https://phabricator.services.mozilla.com/D36181

UltraBlame original commit: 4e287f4fe0298900384fed475a2e6f81734fcf26

--- a/devtools/client/performance-new/popup/popup.css
+++ b/devtools/client/performance-new/popup/popup.css
@@ -16,15 +16,6 @@ html {
 
 body {
   margin: 0;
-  
-
-
-
-
-
-
-
-  max-width: 32em;
 }
 
 .status-display {
